--- a/public/projects.html
+++ b/public/projects.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap 5 Example</title>
+  <title>Samantha Spinner</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link type="text/css" href="css/main.css" rel="stylesheet"/>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
@@ -23,7 +26,7 @@
     
 <div class="container-fluid p-5 text-white text-center bg-dark">
   <h1>My Projects</h1>
-  <p>Links to a few of my repositories :)</p> 
+  <p>Links to a few of my repositories</p> 
 </div>
   
 <div class="container mt-5">
@@ -40,7 +43,7 @@
         <a href="#">Educational Playbook</a>
       </h3>
       <h4>
-        <img class="img-fluid" src="logo.png" alt="logo">
+        <img class="img-fluid" src="/resources/logo.png" alt="logo">
       </h4>
       <p>The Educational Playbook is a website designed for Hartford HealthCare.</p>
       <p>The goal of this website is to give medical educators and hospital staff a better resource to determine 
